recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:18: error: ')' expected but ';' found.
    snowSide(levels,length/(2*levels+1);
                                       ^